# trading-ensemble

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
data/universe/: 2026-05-30.txt  sp500-2026-06-11.txt  sp500_coverage_2026-06-16.json  sp500_density_trials.jsonl  sp500_membership_2026-06-16.parquet  sp500_pit_2026-06-16.txt  sp500_pit_resolved_2026-06-16.txt
docs/: audit.md  operations.md  sentiment_roadmap.md  stat_arb.md  stat_arb_shrinkage_experiment.md
scripts/: backtest.py  build_sp500_universe.py  prediction.py  rl_seed_eval.py  stat_arb.py  stat_arb_data.py  stat_arb_residual_wfo.py  stat_arb_wfo.py  sweep.py  training.py
src/: __init__.py  config.py  data_loader.py  features.py  logging_utils.py  sentiment_analysis.py  trading.py  universe_sp500.py
src/arbitrage/: __init__.py  factors.py  pairs.py  portfolio.py  residual.py  residual_walk_forward.py  walk_forward.py
src/baselines/: __init__.py  buy_and_hold.py  ma_crossover.py  tsmom.py
src/conformal/: __init__.py  aci.py  enbpi.py
src/execution/: __init__.py  costs.py  execution_model.py  target_weights.py
src/models/: __init__,py  __init__.py  arima.py  base.py  ensemble.py  lstm.py  lstm_ppo.py  mapping.py  prophet.py  registry.py  xgboost_model.py  xlstm_grpo.py  xlstm_ppo.py
src/portfolio/: __init__.py  construct.py
src/tracking/: __init__.py  mlflow_utils.py
src/validation/: __init__.py  metrics.py  trials.py  walk_forward.py
tests/: test_arbitrage.py  test_baselines.py  test_broad_run_integration.py  test_conformal.py  test_construct.py  test_cost_capacity.py  test_data_loader.py  test_dividends.py  test_execution.py  test_factors.py  test_feature_engineer_leakage.py  test_logging.py  test_metrics.py  test_real_pipeline_regressions.py  test_residual_statarb.py  test_rl_seed_eval.py  test_script_claim_packet_smokes.py  test_sentiment_leakage.py  test_sweep.py  test_transformer_sentiment.py  test_trial_packets.py  test_universe.py  test_universe_sp500.py  test_walk_forward.py  test_wfo_pipeline.py
