[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-ensemble"
version = "0.0.2"
authors = [
    {name = "Brendon Reperttang", email = "boom90lb@mit.alum.edu"},
]
description = "Time Series Ensemble Trading Model with RL-based decision making"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.14.0",
    "prophet>=1.1.0",
    "xgboost>=1.7.0",
    "tensorflow>=2.10.0",
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "twelvedata>=1.2.10",
    "polygon-api-client>=0.2.11",
    "joblib>=1.2.0",
    "optuna>=3.0.0",
    "pyarrow>=10.0.0",
    "tqdm>=4.64.0",
    "python-dotenv>=1.0.0",
    "requests>=2.30.0",
    "pandas-stubs>=2.2.3.250308",
    "types-requests>=2.32.0.20250328",
    "types-tensorflow>=2.18.0.20250404",
    "keras>=3.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.10.0",
    "isort>=5.10.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/boom90lb/trading-ensemble"
"Bug Tracker" = "https://github.com/boom90lb/trading-ensemble/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["sklearn.*", "statsmodels.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
